package ma.newdev.rh.entity;

public enum ContractType {
    CDI,
    CDD,
    STAGE,
    INTERIM
}
