package ma.newdev.rh.entity;

public enum DocumentType {
    CONTRAT,
    CIN,
    DIPLOME,
    ATTESTATION,
    AUTRE
}
