package ma.newdev.rh.entity;

public enum EmployeeStatus {
    ACTIF,
    ARCHIVE
}
