@startuml NewDEV_RH_Class_M1_Employees
' =====================================================================
' Module 1 — Gestion des Employés
' 3 entités : Employee, EmployeeHistory, HRDocument
' Règles clés :
'   - Pas de suppression physique → soft delete via status = ARCHIVE
'   - Historique des postes IMMUABLE (INSERT-only)
'   - Email unique côté User (cf. AUTH)
' =====================================================================

title Module 1 — Gestion des Employés

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam shadowing false

class User <<Entity>> #E3F2FD {
  - id : Long
  - email : String
  - role : Role
}

class Employee <<Entity>> {
  - id : Long
  - fullName : String
  - cin : String <<unique>>
  - department : String
  - position : String
  - contractType : ContractType
  - hireDate : LocalDate
  - contractEndDate : LocalDate
  - status : EmployeeStatus
  - createdAt : LocalDateTime
  --
  + archive() : void
  + changePosition(newPosition : String, reason : String, actor : User) : void
  + isActive() : boolean
  + isArchived() : boolean
}

class EmployeeHistory <<Entity>> {
  - id : Long
  - previousPosition : String
  - newPosition : String
  - previousDepartment : String
  - newDepartment : String
  - changeReason : String
  - changedAt : LocalDateTime
  - changedBy : Long  ' user_id
}

class HRDocument <<Entity>> {
  - id : Long
  - filename : String
  - originalFilename : String
  - filePath : String
  - fileSize : long
  - mimeType : String
  - documentType : DocumentType
  - uploadedAt : LocalDateTime
  - uploadedBy : Long  ' user_id
  --
  + getDownloadUrl() : String
}

enum ContractType {
  CDI
  CDD
  STAGE
  INTERIM
}

enum EmployeeStatus {
  ACTIF
  ARCHIVE
}

enum DocumentType {
  CONTRAT
  CIN
  DIPLOME
  ATTESTATION
  AUTRE
}

' Relations
User     "1" -- "0..1" Employee : owns >
Employee "1" *-- "0..*" EmployeeHistory : history
Employee "1" *-- "0..*" HRDocument : documents

Employee --> ContractType
Employee --> EmployeeStatus
HRDocument --> DocumentType

note bottom of EmployeeHistory
  **Pattern : Audit log immuable**
  - Une nouvelle ligne est INSÉRÉE à chaque
    changement de poste/département.
  - L'ancienne ligne n'est JAMAIS modifiée.
  - Permet de reconstruire la trajectoire
    professionnelle de l'employé.

  → Méthode Employee.changePosition()
    insère ici avant de muter Employee.
end note

note right of Employee
  **Soft delete uniquement**
  archive() = setter status=ARCHIVE
  + désactivation du User lié.
  Aucun DELETE SQL n'est exécuté.
end note

note left of HRDocument
  **Stockage local sécurisé**
  - filePath pointe vers un dossier
    HORS du répertoire public web.
  - Le téléchargement passe par un
    endpoint authentifié qui vérifie
    le rôle ET la propriété.
end note

note right of User
  Référence depuis AUTH —
  voir 01_class_auth.puml pour le détail.
end note

@enduml
